Changed Authorization from Basic to Bearer.